# sec-file-type-detector

./: .gitignore  README.md  pyproject.toml  report.json
.github/workflows/: ci.yml
src/sec_file_type_detector/: __init__.py  cli.py  detector.py
tests/: test_cli_scan.py  test_detector.py
