[project]
name = "sec-file-type-detector"
version = "0.1.0"
description = "Educational file type detector using magic bytes (content-based validation)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
dependencies = []

[project.scripts]
sec-file-type-detector = "sec_file_type_detector.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
